--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "backend",
+  "name": "xibot-auth",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
+    "express": "^4.17.1",
+    "socket.io": "^4.5.1",
+    "pg": "^8.7.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mongoose": "^8.12.2",
-    "socket.io": "^4.8.1"
+    "dotenv": "^16.0.0"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
